updated ca engine